--- a/src/froala-angular/src/app/app.component.scss
+++ b/src/froala-angular/src/app/app.component.scss
@@ -26,6 +26,13 @@
   }
 }
 
+.document-list {
+  width: fit-content;
+  padding-right: 69px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .editors {
   display: flex;
   justify-content: space-evenly;
